--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "client/package.json",
+        "src": "package.json",
         "use": "@vercel/static-build"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/client/build/index.html"
+        "dest": "/index.html"
       }
     ]
   }
