--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,8 +2,11 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
-        "use": "@vercel/static-build"
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "client/build"
+        }
       }
     ],
     "routes": [
