--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,10 +2,10 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
+        "src": "client/package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "build"
+          "distDir": "client/build"
         }
       }
     ],
