--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
