--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "twilio": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
